small edits to font

--- a/homework1-resume.html
+++ b/homework1-resume.html
@@ -8,22 +8,20 @@
     margin-bottom: 100px;
     margin-right: 300px;
     margin-left: 300px;
-    font-size: 18px;
+    font-size: 20px;
+    background-color: gray;
+    color: white;
 }
   </style>  
 </head>
 <body 
-  background= "gray-background.jpg"
-   background-repeat:no-repeat;
-   background-size:cover;
-
 style="font-family: Georgia";>
 <h1 style="text-align: center";>Chantal M. Delisle</h1>
   <p style="text-align: center";>8 Morrison Avenue, Somerville, MA 02144</p>
   <p style="text-align: center";>chantalmdelisle@gmail.com | www.linkedin.com/in/chantaldelisle/ | (315) 842-2946 </p>
 <h3>EXPERIENCE</h3>
-  <p><b>Event Coordinator, CIC, Boston, MA </b></p> 
-  <p><i>July 2014 - Present</i></p>
+  <h4>Event Coordinator, CIC, Boston, MA</h4> 
+  <p><i>July 2014 - Present</p></i>
 <ul style="list-style-type:square">
   <li>Coordinating event space for innovative and mission-driven companies and organizations</li>
   <li>Cooperating with upper management to plan internal off-site unconference and company outings</li>
@@ -31,7 +29,7 @@ style="font-family: Georgia";>
   <li>Leading projects to streamline processes and heighten efficiency for the team</li>
 </ul>
 
-<p><b>Family Caregiver (Live-in), Susan Farley and Gilbert Harper, Niskayuna, NY</b></p>
+<h4>Family Caregiver (Live-in), Susan Farley and Gilbert Harper, Niskayuna, NY</h4>
   <p><i>September 2012- July 2014</i></p>
   <ul style="list-style-type:square">
     <li>Participated in the up-bringing and academic success of eleven year old child</li>
@@ -40,7 +38,7 @@ style="font-family: Georgia";>
     <li>Coordinated each family member’s schedule and managing all household chores</li>
 </ul>
 
-<p><b>Intern, Camp Sunshine at Sebago Lake, Inc, Casco, ME</b></p>         
+<h4>Intern, Camp Sunshine at Sebago Lake, Inc, Casco, ME</h4>         
 <p><i>May 2012- August 2012</i></p>
 <ul style="list-style-type:square">
 <li>Organized and assisted with various fundraisers and special events while familiarizing others with the organization</li>
@@ -48,27 +46,33 @@ style="font-family: Georgia";>
 <li>Sustained and initiated sponsor relationships by means of telephone and formal correspondence</li>
 <li>Exposed to marketing and communication materials, such as eNewsletters, mailings, and social media </li>
  </ul>
- 
+
+ <hr>
+
 <h3>VOLUNTEER WORK</h3>
-<p><b>Volunteer, St. Lawrence Valley Renewal House, Canton, NY</b></p>                                           
+<h4>Volunteer, St. Lawrence Valley Renewal House, Canton, NY</h4>                                        
 <p><i>Spring 2012</i></p>
 <ul style="list-style-type:square">
 <li>Trained for ten hours in order to observe services offered to survivors of domestic or sexual violence</li>
 <li>Prepared a fundraiser capable of increasing community awareness while financially benefiting the organization</li>
 </ul>
  
-<p><b>Volunteer, United Helpers Nursing Home, Canton, NY</b></p>                             
+<h4>Volunteer, United Helpers Nursing Home, Canton, NY</h4>                           
 <p><i>Fall 2009</i></p>
 <ul style="list-style-type:square">
 <li>Aided residents by providing activities and entertainment</li>
 <li>Transported members to dining hall and assisted with serving meals</li>
 </ul>
 
+<hr>
+
 <h3>EDUCATION</h3>
-<p><b>St. Lawrence University, Canton, NY</b></p>
-<p>Bachelor of Arts, Magna Cum Laude, May 2012</p>
-<p>Major: Sociology Minor: Communication</p>
-<p>Major GPA: 3.550/4.000, Overall GPA: 3.633/4.000</p>
-<p>Study Abroad: Danish Institute for Study Abroad, Copenhagen, Denmark (Spring 2011)</p>
+<h4>St. Lawrence University, Canton, NY</h4>
+<p><i>May 2012</i></p>
+<ul style="list-style-type:none">
+<li>Bachelor of Arts, Magna Cum Laude</li>
+<li>Major: Sociology Minor: Communication</li>
+<li>Major GPA: 3.550/4.000, Overall GPA: 3.633/4.000</li>
+<li>Study Abroad: Danish Institute for Study Abroad, Copenhagen, Denmark (Spring 2011)</li>
 </body>
 </html>
